Implement quay collection

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
-name = ansible-collections-opentelekomcloud._CHANGEME_
-summary = Ansible collections for _CHANGEME_
+name = ansible-collections-quay
+summary = Ansible collections for getting info about quay repository tags
 description-file =
     README.md
 
-author = opentelekomcloud
-home-page = https://open.telekom.cloud
+author = lego963
+home-page = https://github.com/lego963
 classifier =
     License :: OSI Approved :: Apache License
     Development Status :: 5 - Production/Stable
@@ -21,13 +21,8 @@ setup-hooks =
 
 [files]
 data_files =
-    share/ansible/collections/ansible_collections/opentelekomcloud/_CHANGEME_/ = README.md
-    share/ansible/collections/ansible_collections/opentelekomcloud/_CHANGME_/roles/ = roles/*
-    share/ansible/collections/ansible_collections/opentelekomcloud/_CHANGME_/plugins/ = plugins/*
-    share/ansible/collections/ansible_collections/opentelekomcloud/_CHANGME_/playbooks/ = playbooks/*
-    share/ansible/collections/ansible_collections/opentelekomcloud/_CHANGME_/scripts/ = scripts/*
-    share/ansible/collections/ansible_collections/opentelekomcloud/_CHANGME_/docs/ = docs/*
-    share/ansible/collections/ansible_collections/opentelekomcloud/_CHANGME_/meta/ = meta/*
+    share/ansible/collections/ansible_collections/lego963/quay/ = README.md
+    share/ansible/collections/ansible_collections/lego963/quay/plugins = plugins/*
 
 [wheel]
 universal = 1
