--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -4,7 +4,6 @@
     merge-mode: squash-merge
     templates:
       - ansible-collection
-    vars:
-      ansible_collection_namespace: fake
-      ansible_collection_name: fake
-
+    # vars:
+    #   ansible_collection_namespace: fake
+    #   ansible_collection_name: fake
