--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,7 @@ setup-hooks =
 
 [files]
 data_files =
-    share/ansible/collections/ansible_collections/lego963/quay/ = README.rst
+    share/ansible/collections/ansible_collections/lego963/quay/ = README.md
     share/ansible/collections/ansible_collections/lego963/quay/plugins = plugins/*
 
 [wheel]
